// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadAssetDialog from computer snapshots the component 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c28 {
  color: #666687;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c35 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c32 svg {
  height: 12px;
  width: 12px;
}

.c32 svg > g,
.c32 svg path {
  fill: #ffffff;
}

.c32[aria-disabled='true'] {
  pointer-events: none;
}

.c32:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c32:focus-visible {
  outline: none;
}

.c32:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c33 .sc-cfJLRR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 .c34 {
  color: #ffffff;
}

.c33[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true'] .c34 {
  color: #666687;
}

.c33[aria-disabled='true'] svg > g,
.c33[aria-disabled='true'] svg path {
  fill: #666687;
}

.c33[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true']:active .c34 {
  color: #666687;
}

.c33[aria-disabled='true']:active svg > g,
.c33[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c33:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c33:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c33 svg > g,
.c33 svg path {
  fill: #ffffff;
}

.c39 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c39 .sc-cfJLRR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 .c34 {
  color: #ffffff;
}

.c39[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c39[aria-disabled='true'] .c34 {
  color: #666687;
}

.c39[aria-disabled='true'] svg > g,
.c39[aria-disabled='true'] svg path {
  fill: #666687;
}

.c39[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c39[aria-disabled='true']:active .c34 {
  color: #666687;
}

.c39[aria-disabled='true']:active svg > g,
.c39[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c39:hover {
  background-color: #f6f6f9;
}

.c39:active {
  background-color: #eaeaef;
}

.c39 .c34 {
  color: #32324d;
}

.c39 svg > g,
.c39 svg path {
  fill: #32324d;
}

.c11 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c20 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c21 {
  background: #f6f6f9;
  padding-top: 64px;
  padding-bottom: 64px;
  border-radius: 4px;
  border-color: #c0c0cf;
  border: 1px solid #c0c0cf;
  position: relative;
}

.c27 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c29 {
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  z-index: 1;
  width: 100%;
}

.c31 {
  position: relative;
}

.c2 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c4 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c1 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: #32324d1F;
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 51.875rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c8 svg {
  height: 12px;
  width: 12px;
}

.c8 svg > g,
.c8 svg path {
  fill: #ffffff;
}

.c8[aria-disabled='true'] {
  pointer-events: none;
}

.c8:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c8:focus-visible {
  outline: none;
}

.c8:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c9 svg > g,
.c9 svg path {
  fill: #8e8ea9;
}

.c9:hover svg > g,
.c9:hover svg path {
  fill: #666687;
}

.c9:active svg > g,
.c9:active svg path {
  fill: #a5a5ba;
}

.c9[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c9[aria-disabled='true'] svg path {
  fill: #666687;
}

.c5 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c36 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c38 > * + * {
  margin-left: 8px;
}

.c18 {
  background: #eaeaef;
}

.c19 {
  height: 1px;
  border: none;
  margin: 0;
}

.c15 {
  color: #4945ff;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c17 {
  color: #666687;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c13 {
  padding: 16px;
}

.c14 {
  border-bottom: 2px solid #4945ff;
}

.c16 {
  border-bottom: 2px solid transparent;
}

.c12[aria-disabled='true'] {
  cursor: not-allowed;
}

.c25 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  font-size: 3.75rem;
}

.c26 svg path {
  fill: #4945ff;
}

.c22 {
  border-style: dashed;
}

.c30 {
  opacity: 0;
  cursor: pointer;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c1"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c2 c3"
            role="dialog"
          >
            <div
              class="c4 c5"
            >
              <div
                class="c6"
              >
                <h2
                  class="c7"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c8 c9"
                  type="button"
                >
                  <span
                    class="c10"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c11"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-controls="tabgroup-1-0-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c12"
                    id="tabgroup-1-0-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c13 c14"
                    >
                      <span
                        class="c15"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c12"
                    id="tabgroup-1-1-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c13 c16"
                    >
                      <span
                        class="c17"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c18 c19"
                />
              </div>
              <div>
                <div
                  aria-labelledby="tabgroup-1-0-tab"
                  id="tabgroup-1-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c20"
                    >
                      <label>
                        <div
                          class="c21 c22"
                        >
                          <div
                            class="c23"
                          >
                            <div
                              class="c24 c25"
                            >
                              <div
                                class="c26"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 24 20"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M21.569 2.398H7.829v1.586h13.74c.47 0 .826.5.826 1.094v9.853l-2.791-3.17a2.13 2.13 0 00-.74-.55 2.214 2.214 0 00-.912-.196 2.215 2.215 0 00-.912.191 2.131 2.131 0 00-.74.546l-2.93 3.385-2.973-3.36a2.147 2.147 0 00-.741-.545 2.228 2.228 0 00-1.824.007c-.286.13-.538.319-.739.553l-2.931 3.432V7.653H2.51v9.894c.023.153.06.304.108.452v.127l.041.095c.057.142.126.28.207.412l.099.15c.074.107.157.207.247.302l.124.119c.13.118.275.222.43.309h.024c.36.214.775.327 1.198.325h16.515c.36-.004.716-.085 1.039-.24.323-.153.606-.375.827-.648a2.78 2.78 0 00.504-.888c.066-.217.108-.44.124-.666V5.078a2.497 2.497 0 00-.652-1.81 2.706 2.706 0 00-1.776-.87z"
                                    fill="#32324D"
                                  />
                                  <path
                                    d="M12.552 9.199c.912 0 1.651-.71 1.651-1.585 0-.876-.74-1.586-1.651-1.586-.912 0-1.652.71-1.652 1.586 0 .875.74 1.585 1.652 1.585zM3.303 6.408h.826V3.997h2.477v-.793-.793H4.129V0h-.826c-.219 0-.85.002-.826 0v2.411H0v1.586h2.477v2.41h.826z"
                                    fill="#32324D"
                                  />
                                </svg>
                              </div>
                              <div
                                class="c27"
                              >
                                <span
                                  class="c28"
                                >
                                  Drag & Drop here or
                                </span>
                              </div>
                              <input
                                class="c29 c30"
                                multiple=""
                                name="files"
                                tabindex="-1"
                                type="file"
                                width="100%"
                              />
                              <div
                                class="c31"
                              >
                                <button
                                  aria-disabled="false"
                                  class="c32 c33"
                                  type="button"
                                >
                                  <span
                                    class="c34 c35"
                                  >
                                    Browse files
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="c4 c36"
                    >
                      <div
                        class="c6"
                      >
                        <div
                          class="c37 c38"
                        >
                          <button
                            aria-disabled="false"
                            class="c32 c39"
                            type="button"
                          >
                            <span
                              class="c34 c35"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c37 c38"
                        />
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UploadAssetDialog from url snapshots the component 1`] = `
<body
  class="lock-body-scroll"
>
  .c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  .c6 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c34 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c31 svg {
  height: 12px;
  width: 12px;
}

.c31 svg > g,
.c31 svg path {
  fill: #ffffff;
}

.c31[aria-disabled='true'] {
  pointer-events: none;
}

.c31:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c31:focus-visible {
  outline: none;
}

.c31:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c35 .sc-cfJLRR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 .c33 {
  color: #ffffff;
}

.c35[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true'] .c33 {
  color: #666687;
}

.c35[aria-disabled='true'] svg > g,
.c35[aria-disabled='true'] svg path {
  fill: #666687;
}

.c35[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true']:active .c33 {
  color: #666687;
}

.c35[aria-disabled='true']:active svg > g,
.c35[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c35:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c35:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c35 svg > g,
.c35 svg path {
  fill: #ffffff;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c32 .sc-cfJLRR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 .c33 {
  color: #ffffff;
}

.c32[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c32[aria-disabled='true'] .c33 {
  color: #666687;
}

.c32[aria-disabled='true'] svg > g,
.c32[aria-disabled='true'] svg path {
  fill: #666687;
}

.c32[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c32[aria-disabled='true']:active .c33 {
  color: #666687;
}

.c32[aria-disabled='true']:active svg > g,
.c32[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c32:hover {
  background-color: #f6f6f9;
}

.c32:active {
  background-color: #eaeaef;
}

.c32 .c33 {
  color: #32324d;
}

.c32 svg > g,
.c32 svg path {
  fill: #32324d;
}

.c10 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c19 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c24 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c27 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c25 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c25:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c26 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c26::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26:focus-within {
  outline: none;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 4px;
}

.c20 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c20 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c20 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c20 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c20 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c1 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c3 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c0 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: #32324d1F;
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  width: 51.875rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c7 svg {
  height: 12px;
  width: 12px;
}

.c7 svg > g,
.c7 svg path {
  fill: #ffffff;
}

.c7[aria-disabled='true'] {
  pointer-events: none;
}

.c7:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c7:focus-visible {
  outline: none;
}

.c7:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c8 svg > g,
.c8 svg path {
  fill: #8e8ea9;
}

.c8:hover svg > g,
.c8:hover svg path {
  fill: #666687;
}

.c8:active svg > g,
.c8:active svg path {
  fill: #a5a5ba;
}

.c8[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c8[aria-disabled='true'] svg path {
  fill: #666687;
}

.c4 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c28 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c30 > * + * {
  margin-left: 8px;
}

.c17 {
  background: #eaeaef;
}

.c18 {
  height: 1px;
  border: none;
  margin: 0;
}

.c16 {
  color: #4945ff;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c14 {
  color: #666687;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c12 {
  padding: 16px;
}

.c15 {
  border-bottom: 2px solid #4945ff;
}

.c13 {
  border-bottom: 2px solid transparent;
}

.c11[aria-disabled='true'] {
  cursor: not-allowed;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c1 c2"
            role="dialog"
          >
            <div
              class="c3 c4"
            >
              <div
                class="c5"
              >
                <h2
                  class="c6"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c7 c8"
                  type="button"
                >
                  <span
                    class="c9"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c10"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c11"
                    id="tabgroup-8-0-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c12 c13"
                    >
                      <span
                        class="c14"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-controls="tabgroup-8-1-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c11"
                    id="tabgroup-8-1-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c12 c15"
                    >
                      <span
                        class="c16"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c17 c18"
                />
              </div>
              <div>
                <div
                  aria-labelledby="tabgroup-8-1-tab"
                  id="tabgroup-8-1-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form
                    action="#"
                    novalidate=""
                  >
                    <div
                      class="c19"
                    >
                      <div
                        class="c20"
                      >
                        <div>
                          <div
                            class="c21 c22"
                            spacing="1"
                          >
                            <div
                              class="c23"
                            >
                              <label
                                class="c24"
                                for="textarea-1"
                              >
                                <div
                                  class="c23"
                                >
                                  URL
                                </div>
                              </label>
                            </div>
                            <div
                              class="c25"
                            >
                              <textarea
                                aria-describedby="textarea-1-hint"
                                aria-invalid="false"
                                class="c26"
                                id="textarea-1"
                                name="urls"
                              />
                            </div>
                            <p
                              class="c27"
                              id="textarea-1-hint"
                            >
                              Separate your URL links by a carriage return.
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c3 c28"
                    >
                      <div
                        class="c5"
                      >
                        <div
                          class="c29 c30"
                        >
                          <button
                            aria-disabled="false"
                            class="c31 c32"
                            type="button"
                          >
                            <span
                              class="c33 c34"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c29 c30"
                        >
                          <button
                            aria-disabled="false"
                            class="c31 c35"
                            type="submit"
                          >
                            <span
                              class="c33 c34"
                            >
                              Next
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
